# everything_mobile

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/everything_mobile/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-scanner.cpp
app/src/main/java/com/cookandroid/myapplication/: FileAdapter.kt  MainActivity.kt
app/src/main/java/com/example/everything_mobile/: FileAdapter.kt  MainActivity.kt
app/src/main/java/com/example/everything_mobile/data/: AppDatabase.kt
app/src/main/java/com/example/everything_mobile/data/files/: FileDao.kt  FileEntity.kt  FileManager.kt  FileScanner.kt
app/src/main/res/drawable/: bg_search_box.xml  ic_file.xml  ic_folder.xml  ic_launcher_foreground.xml  ic_sort.xml
app/src/main/res/layout/: activity_main.xml  item_file_row.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  file_paths.xml
app/src/test/java/com/example/everything_mobile/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
